[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/papers.png" type="Texture" id=1]
[ext_resource path="res://objects/ui/ButtonKeyGamepadIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Paper.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.14514, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 24 )

[node name="Paper" type="RigidBody2D"]
collision_layer = 64
collision_mask = 8
mode = 2
gravity_scale = 3.0
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0, -10.003 )
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="ButtonKeyGamepadIcon" parent="." instance=ExtResource( 2 )]
margin_left = -8.0
margin_top = -64.0
margin_right = 8.0
margin_bottom = -48.0
animated = true
action = "ui_up"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
